--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
 					<span id="framecounter">(0/0 fps)</span>
 				</font>
 				<script type="text/javascript" src="lib/melonJS-0.9.6.js"></script>
-                                <script type="text/javascript" src="shadow.js"></script>
-                                <script type="text/javascript" src="sparks.js"></script>
+                                <script type="text/javascript" src="entities.js"></script>
                                 <script type="text/javascript" src="player.js"></script>
                                 <script type="text/javascript" src="text.js"></script>
                                 <script type="text/javascript" src="guard.js"></script>
-                                <script type="text/javascript" src="rat.js"></script>
-                                <script type="text/javascript" src="burger.js"></script>
+                                <script type="text/javascript" src="rat.js"></script>                                
                                 <script type="text/javascript" src="hud.js"></script>
 				<script type="text/javascript" src="main.js"></script>
 			</div>
