--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 	</head>
 	<body bgcolor="black">
 		<div id="info" style="width: 640px;">
-			<div id="jsapp" style="margin: 0px, auto">
+			<div id="jsapp">
 				<font color="#FFFFFF", style="position: absolute; font-size: 10px; font-family: Courier New">
 					<span id="framecounter">(0/0 fps)</span>
 				</font>
 				<script type="text/javascript" src="lib/melonJS-0.9.6.js"></script>
+                                <script type="text/javascript" src="text.js"></script>
                                 <script type="text/javascript" src="entities.js"></script>
                                 <script type="text/javascript" src="player.js"></script>
-                                <script type="text/javascript" src="text.js"></script>
                                 <script type="text/javascript" src="guard.js"></script>
                                 <script type="text/javascript" src="rat.js"></script>                                
                                 <script type="text/javascript" src="hud.js"></script>
