--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 				<script type="text/javascript" src="main.js"></script>
 			</div>
 		</div>
+                Controls: Arrows/X
 	</body>
 </html>
