--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
                 <script type="text/javascript" src="player.js"></script>
                 <script type="text/javascript" src="guard.js"></script>
                 <script type="text/javascript" src="rat.js"></script>                                
-
+                
+                <script type="text/javascript" src="spawn.js"></script>
             </div>
         </div>
     </body>
