--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <script type="text/javascript" src="main.js"></script>
                 <script type="text/javascript" src="resources.js"></script>
 
+                <script type="text/javascript" src="effects.js"></script>
                 <script type="text/javascript" src="npc.js"></script>
                 <script type="text/javascript" src="entities.js"></script>
                 <script type="text/javascript" src="hud.js"></script>
