--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <script type="text/javascript" src="npc.js"></script>
                 <script type="text/javascript" src="entities.js"></script>
                 <script type="text/javascript" src="items.js"></script>
+                <script type="text/javascript" src="destroyable.js"></script>
                 
                 <script type="text/javascript" src="gui.js"></script>
                 
