--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 <script type="text/javascript" src="resources.js"></script>
                 <script type="text/javascript" src="fonts.js"></script>
                 <script type="text/javascript" src="drop.js"></script>
+                <script type="text/javascript" src="mechanic.js"></script>
                 
                 <script type="text/javascript" src="effects.js"></script>
                 <script type="text/javascript" src="npc.js"></script>
