--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
                 <script type="text/javascript" src="main.js"></script>
                 <script type="text/javascript" src="resources.js"></script>
                 <script type="text/javascript" src="fonts.js"></script>
+                <script type="text/javascript" src="audio.js"></script>
                 <script type="text/javascript" src="mechanic.js"></script>
+                <script type="text/javascript" src="stats.js"></script>
                 
                 <script type="text/javascript" src="effects.js"></script>
                 <script type="text/javascript" src="entities.js"></script>
