--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <script type="text/javascript" src="fonts.js"></script>
                 <script type="text/javascript" src="audio.js"></script>
                 <script type="text/javascript" src="mechanic.js"></script>
+                <script type="text/javascript" src="pathfinding.js"></script>
                 <script type="text/javascript" src="stats.js"></script>
                 
                 <script type="text/javascript" src="effects.js"></script>
