--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8"> 
         <title>Mana</title>
+        <link rel="stylesheet" href="data_web/main.css" type="text/css">
         <style type="text/css">
             #console {
-                width: 400px;
+                width: 300px;
                 float: left;
                 font-size: 75%;
                 color: white;
@@ -31,6 +32,11 @@
         </style>
     </head>
     <body style="background-color: black">
+        <div class="center">
+            <header class="header">
+                <a href="index.html" class="button">Home</a>
+                <a href="index.html" class="button">Database</a>
+            </header>
         <div id="info">
             <div id="console">
                 <span id="framecounter">(0/0 fps)</span><br>
@@ -94,5 +100,6 @@
                 <script type="text/javascript" src="drop.js"></script>
             </div>
         </div>
+            </div>
     </body>
 </html>
