--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <script type="text/javascript" src="lib/jquery-1.10.1.js"></script>
                     <script type="text/javascript" src="lib/melonJS-0.9.8.js"></script>
 
-                    <script type="text/javascript" src="build/Mana-0.0.5.js"></script>
+                    <script type="text/javascript" src="build/Mana-dev-0.0.5.js"></script>
                 </div>
             </div>
     </body>
